[project]
name = "gym-rad-search"
version = "1.0.0"
# description = ""
# readme = "README.md" 
requires-python = ">=3.9"
# license = {file = "LICENSE.txt"}
keywords = ["openai", "gym", "radiation", "search"]
authors = [{ name = "Philippe Proctor"}]
maintainers = [{ name = "Connor Baker"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    #   "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "gym",
    "matplotlib",
    "numpy",
    "typing-extensions",
    "visilibity @ git+https://github.com/peproctor/PyVisiLibity.git@c76020079110231f882f38f61b3ab25d01de21f0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
